--- a/package.json
+++ b/package.json
@@ -15,5 +15,6 @@
     },
     "devDependencies": {
         "nodemon": "^2.0.2"
-    }
+    },
+    "publishConfig": { "registry": "https://npm.pkg.github.com/" }
 }
